--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,4 +5,22 @@
   left: 0;
   padding: 60px 30px;
   background: var(--color-light);
+  transition: var(--transition);
+  z-index: 11;
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  border-bottom: 1px solid var(--color-lightEx);
+  padding-block: 14px;
+  color: var(--color-dark);
+}
+
+.nav-link span {
+  font-size: 1.1rem;
+}
+
+.nav-toggle {
 }
