--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -38,3 +38,13 @@
   margin-bottom: 5px;
   transition: var(--transition);
 }
+
+.nav-close span:nth-child(1) {
+  transform: rotate(45deg) translate(3px, 6px);
+}
+.nav-close span:nth-child(2) {
+  display: none;
+}
+.nav-close span:nth-child(3) {
+  transform: rotate(-45deg) translate(1px, 2px);
+}
