finished styles for navbar toggle

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -46,5 +46,14 @@
   display: none;
 }
 .nav-close span:nth-child(3) {
-  transform: rotate(-45deg) translate(1px, 2px);
+  transform: rotate(-45deg) translate(-1px, -2px);
+}
+
+/* Active class */
+.navlinksActive span {
+  color: var(--color-primary);
+}
+
+.navlinksActive h3 {
+  color: var(--color-primary);
 }
