--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -61,3 +61,70 @@
 .navlinksActive h3 {
   color: var(--color-primary);
 }
+
+/* Media queries */
+
+@media (min-width: 1024px) {
+  nav {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    position: fixed;
+    right: 3%;
+    z-index: 100;
+  }
+
+  .nav-toggle {
+    display: none;
+  }
+
+  .navlinks {
+    position: relative;
+    left: 0;
+    padding: 0;
+    width: 100%;
+    background: transparent;
+  }
+
+  .nav-link {
+    border: transparent;
+    padding-block: 0;
+    flex-direction: row-reverse;
+    gap: 0;
+    margin: 2rem 0;
+  }
+
+  .nav-link span {
+    background: var(--color-light);
+    border-radius: 50%;
+    padding: 1rem;
+    display: flex;
+    transition: var(--transition);
+  }
+
+  .nav-link:hover span {
+    background-color: var(--color-primary);
+    color: white;
+  }
+
+  .nav-link h3 {
+    transition: var(--transition);
+    transform: scale(0);
+
+  }
+
+  .nav-link:hover h3 {
+    color: var(--color-primary);
+    transform: scale(1);
+  }
+
+  .navlinksActive span{
+    background-color: var(--color-primary);
+    color: white;
+  }
+  
+  .navlinksActive h3{
+    transform: scale(.8);
+  }
+
+
