--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,3 +1,43 @@
 .About {
   padding-bottom: 0;
 }
+
+.about-container {
+  display: grid;
+  grid-template-columns: 52% auto;
+  gap: 3rem;
+}
+
+.about-left {
+  & p {
+    margin-bottom: 1rem;
+  }
+
+  & h3 {
+    margin-bottom: 1rem;
+  }
+}
+
+.about-right {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+/* Max-Width: 1024px */
+@media (max-width: 1024px) {
+  .about-container {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
+  .about-right {
+    grid-row: 1;
+  }
+}
+/* Max-Width: 600px */
+@media (max-width: 600px) {
+  .about-right {
+    gap: 1rem;
+  }
+}
