changed portfolio project links, photos. Also changed Links to be buttons. For button icons added fontawesome brands npm

--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -33,6 +33,11 @@
     color: var(--color-primary);
     text-decoration: underline;
   }
+
+  & .links {
+    display: flex;
+    gap: 2rem;
+  }
 }
 
 /* Max Width 1024px */
